[css-conditional] CSS.supports with one string should accept paren-less declaration.

Relevant spec: https://drafts.csswg.org/css-conditional/#the-css-interface

> When invoked with a single conditionText argument, it must return true if
> conditionText, when either parsed and evaluated as a supports_condition or
> parsed as a declaration, wrapped in implied parentheses, and evaluated as a
> supports_condition, would return true. Otherwise, it must return false.

(Note the "wrapped in implied parentheses").

BUG=729403

Review-Url: https://codereview.chromium.org/2919283002
Cr-Commit-Position: refs/heads/master@{#477264}

Former-commit-id: b5416b84aba8ec3442788d6bbea54091ef18b6b0